# ironverse

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html
assets/images/logo/: cursor_mouse.xcf
assets/shaders/: color_fragment.wgsl  color_vertex.wgsl
crates/bevy_voxel/: Cargo.toml
crates/bevy_voxel/src/: implement.rs  lib.rs
crates/bevy_voxel/src/add/: bydist.rs  mod.rs
crates/bevy_voxel/src/editstate/: add_dist.rs  add_normal.rs  add_snap.rs  dist_common.rs  mod.rs  normal_common.rs  remove_dist.rs  remove_normal.rs  remove_snap.rs
crates/bevy_voxel/src/editstate/add/: bydist.rs
crates/bevy_voxel/src/editstate/remove/: bydist.rs  mod.rs  normal.rs
crates/bevy_voxel/src/functions/: async_loading.rs  mod.rs  sphere.rs
crates/bevy_voxel/src/lod/: mod.rs
crates/bevy_voxel/src/physics/: mod.rs
crates/bevy_voxel/src/remove/: bydist.rs  mod.rs
crates/bevy_voxel/src/util/: mod.rs
crates/lib/bevy_flycam/: Cargo.toml
crates/lib/bevy_flycam/src/: lib.rs
crates/lib/bevy_iron_ui/: Cargo.toml
crates/lib/bevy_iron_ui/src/: core.rs  layout.rs  lib.rs  systems.rs
crates/lib/bevy_iron_voxel/: Cargo.toml
crates/lib/bevy_iron_voxel/src/: lib.rs
crates/lib/bevy_iron_voxel/src/components/: camera.rs  player.rs
crates/lib/bevy_iron_voxel/src/components/chunk_edit/: mod.rs
crates/lib/bevy_iron_voxel/src/debugger/: mod.rs  text.rs
crates/lib/bevy_iron_voxel/src/graphics/: chunk_preview.rs  mod.rs  player.rs
crates/lib/bevy_iron_voxel/src/graphics_low/: chunks.rs
crates/lib/bevy_iron_voxel/src/graphics_normal/: chunk_preview.rs  chunks.rs  mod.rs
crates/lib/bevy_iron_voxel/src/input/: hotbar.rs
crates/lib/bevy_iron_voxel/src/native/: mod.rs
crates/lib/bevy_iron_voxel/src/native_ui/: load.rs  mod.rs  save.rs
crates/lib/bevy_iron_voxel/src/save/: mod.rs
crates/lib/bevy_iron_voxel/src/states/: load.rs  mod.rs  start.rs
crates/lib/bevy_iron_voxel/src/tests/: chunk.rs  voxel_size_config.rs
crates/lib/bevy_iron_voxel/src/ui/: hotbar.rs  inventory.rs  menu.rs  mod.rs
crates/lib/bevy_iron_voxel/src/utils/: mod.rs
crates/lib/bevy_iron_voxel/src/wasm/: mod.rs
crates/lib/bevy_iron_voxel/src/wasm_ui/: load.rs  mod.rs  save.rs
crates/lib/bevy_voxel/: Cargo.toml
crates/lib/bevy_voxel/src/: implement.rs  lib.rs
crates/lib/bevy_voxel/src/editstate/: add_dist.rs  add_normal.rs  add_snap.rs  dist_common.rs  mod.rs  normal_common.rs  remove_dist.rs  remove_normal.rs  remove_snap.rs
crates/lib/bevy_voxel/src/functions/: async_loading.rs  cube.rs  mod.rs  sphere.rs
crates/lib/bevy_voxel/src/lod/: mod.rs
crates/lib/bevy_voxel/src/util/: mod.rs
crates/lib/bevy_voxel/src/wasm/: mod.rs
crates/lib/multithread/: Cargo.toml  build.sh  index.js
crates/lib/multithread/src/: lib.rs  plugin.rs
crates/lib/multithread/tests/: web.rs
crates/lib/utils/: Cargo.toml
crates/lib/voxels/: Cargo.toml
crates/lib/voxels/assets/: 2_voxel_positions.json  2_voxel_weights.json
crates/lib/voxels/src/chunk/: chunk_manager.rs  mod.rs
crates/lib/voxels/src/data/: surface_nets.rs
crates/lib/voxels/src/utils/: grid_hashmap.rs  mod.rs
crates/multithread/: Cargo.toml  index.js
crates/multithread/src/: lib.rs  plugin.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/voxels/: Cargo.toml
crates/voxels/assets/: 1_voxel_positions.data  1_voxel_types.data  1_voxel_weights.data  2_voxel_types.json
crates/voxels/src/chunk/: chunk_manager.rs  mod.rs
crates/voxels/src/data/: cubic.rs  dual_contour.rs  mod.rs  surface_nets.rs  voxel_octree.rs
crates/voxels/src/utils/: mod.rs
diagrams/: ChunkRemoval.drawio
docs/: ChunkRemoval.drawio
docs/assets/images/logo/: anvil-constellation.xcf
docs/wasm/: app.d.ts  app.js  app_bg.wasm.d.ts
docs/wasm/multithread/: multithread.d.ts  multithread.js  multithread_bg.wasm  multithread_bg.wasm.d.ts  package.json
examples/: add_voxel.rs  chunk_depth_voxel_scale_range.rs  chunk_edit.rs  config_voxel_size_comparison.rs  config_voxel_size_generated_voxels.rs  configurable_voxel_size.rs  lod.rs  remove_voxel.rs  size_comparison.rs
examples/editor/: editor.rs
examples/editor/components/: mod.rs
examples/editor/components/chunk_edit/: mod.rs
examples/editor/debugger/: text.rs
examples/editor/graphics/: chunk_preview.rs  mod.rs
examples/editor/graphics_low/: chunks.rs
examples/editor/graphics_normal/: chunk_preview.rs  chunks.rs
examples/editor/native/: mod.rs
examples/editor/states/: mod.rs
examples/editor/ui/: hotbar.rs  inventory.rs  menu.rs
examples/editor/wasm_ui/: save.rs
src/: main.rs
src/components/: camera.rs  chunk.rs  chunk_edit.rs  chunk_preview.rs  mod.rs  player.rs  range.rs
src/components/chunk_edit/: chunk_edit.rs  create_normal.rs  delete_normal.rs  mod.rs
src/components/chunk_edit/voxel_add/: mod.rs  normal.rs  snap.rs
src/components/chunk_edit/voxel_remove/: mod.rs  normal.rs  snap.rs
src/components/chunk_edit_old/: chunk_edit.rs  create_normal.rs
src/components/voxel_add/: mod.rs  normal.rs  snap.rs
src/data/: mod.rs
src/debugger/: mod.rs  text.rs
src/graphics/: mod.rs
src/graphics_low/: chunk_preview.rs  chunks.rs
src/graphics_normal/: chunk_preview.rs  chunks.rs  mod.rs
src/input/: hotbar.rs
src/native/: mod.rs  save.rs
src/native_ui/: load.rs  mod.rs
src/physics/: mod.rs
src/states/: init.rs  load.rs  new.rs
src/tests/: chunk.rs  mesh_color.rs  mod.rs  voxel_size_config.rs
src/ui/: mod.rs
src/utils/: mod.rs
src/wasm/: mod.rs
