[package]
name = "ironverse-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "crates/*"
]



[dependencies]
array-bytes = { version = "6.1.0", optional = true }
bevy = "0.10.1"
bevy_egui = { version = "0.20.3", optional = true }
noise = { version = "0.7.0", optional = true }
cfg-if = "1.0.0"
rapier3d = { version = "0.17.2", features = [ "simd-stable" ], optional = true }
rfd = { version = "0.11", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
toml = { version = "0.7.3", optional = true }

bevy_flycam = { path = "crates/bevy_flycam", optional = true }
voxels = { path = "crates/voxels", optional = true }

ron = { version = "0.8.0", optional = true }
obj-exporter = { version = "0.2.0", optional = true }

[dev-dependencies]
fast-surface-nets = "0.2.0"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "Document",
  "HtmlElement", 
  "ErrorEvent", 
  "Window",
  "Url",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-lite = "1.11.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
flume = "0.10.14"
js-sys = "0.3"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.19"

[features]
default = [
  "core",
  "player",
  "chunk",
  "ui_prompt",
  "ui",
  "graphics_low",
  # "graphics_normal",  # Either graphics_low or graphics_normal
]

core = [
  "bevy_flycam", "voxels", "ron", "obj-exporter",
  "rapier3d", "serde", "toml", "array-bytes"
]
player = []
chunk = []

# Graphics
graphics_low = []
graphics_normal = []
ui = ["bevy_egui"]
ui_prompt = ["rfd"]


tests = ["test_chunk", "bevy_egui", "noise"]
test_chunk = []
test_raycast = []

