[package]
name = "bevy_voxel"
version = "0.1.0"
authors = ["ashneverdawn <ashneverdawn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = ["bevy_core_pipeline"] }
voxels = { path = "../voxels" }
utils = { path = "../utils" }
rapier3d = { version = "0.17.2", features = [ "simd-stable" ]}