[package]
name = "bevy_voxel"
version = "0.1.0"
authors = ["ashneverdawn <ashneverdawn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", default-features = true, features = ["bevy_core_pipeline"] }
cfg-if = "1.0.0"
voxels = { path = "../voxels" }
utils = { path = "../utils" }
multithread = { path = "../multithread" }
rapier3d = { version = "0.17.2", features = [ "simd-stable" ]}


[target.'cfg(target_arch = "wasm32")'.dependencies]
