[package]
name = "multithread"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies]
wasm-mt = "0.1.3"
wasm-mt-pool = "0.1.2"
js-sys = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_closure = "0.3"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
rand = { version = "0.7", features = ["wasm-bindgen"] }
humantime = "1"


bevy = "0.10.1"
flume = "0.11.0"
voxels = { path = "../voxels" }
array-bytes = "6.1.0"
bincode = "1.3.3"
num_cpus = "1.0"


[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'ImageData',
  'Performance',
  'PerformanceTiming',
  'Window',

  'HtmlElement',
  'HtmlInputElement',
  'MessageEvent',
  'InputEvent',

  'Event',
  'EventTarget',
  'CustomEvent',
  'CustomEventInit',
  'Navigator',
]
