[package]
name = "bevy_voxel"
version = "0.1.0"
authors = ["gamedevalice <gamedevalice256@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", default-features = true, features = ["bevy_core_pipeline"] }
cfg-if = "1.0.0"
voxels = { path = "../voxels" }
utils = { path = "../utils" }

rapier3d = { version = "0.17.2", features = [ "simd-stable" ]}
flume = "0.11.0"

bincode = "1.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
multithread = { path = "../multithread" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-lite = "1.11.3"